[gd_scene load_steps=3 format=3 uid="uid://dmemm6brwag5d"]

[ext_resource type="Texture2D" uid="uid://bqldojbsjv1md" path="res://assets/inventory/inventory-background.png" id="1_5052p"]
[ext_resource type="Script" path="res://scenes/npc_quest.gd" id="1_k4rn8"]

[node name="NPCQuest" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_k4rn8")

[node name="Quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -47.0
offset_top = -77.0
offset_right = 47.0
offset_bottom = -10.0
texture = ExtResource("1_5052p")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="Quest"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 75.0
offset_bottom = 26.0
scale = Vector2(0.4, 0.4)
text = "Name"

[node name="Text" type="RichTextLabel" parent="Quest"]
layout_mode = 0
offset_left = 4.0
offset_top = 11.0
offset_right = 217.0
offset_bottom = 108.0
scale = Vector2(0.4, 0.4)
text = "text"

[node name="YesButton1" type="Button" parent="Quest"]
layout_mode = 0
offset_left = 61.0
offset_top = 52.0
offset_right = 95.0
offset_bottom = 83.0
scale = Vector2(0.4, 0.4)
text = "yes"

[node name="NoButton1" type="Button" parent="Quest"]
layout_mode = 0
offset_left = 76.0
offset_top = 52.0
offset_right = 110.0
offset_bottom = 83.0
scale = Vector2(0.4, 0.4)
text = "no"

[node name="NoQuest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -38.0
offset_top = -55.0
offset_right = 37.0
offset_bottom = -10.0
texture = ExtResource("1_5052p")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="NoQuest"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 75.0
offset_bottom = 26.0
scale = Vector2(0.4, 0.4)
text = "Worker"

[node name="Text" type="RichTextLabel" parent="NoQuest"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 162.0
offset_bottom = 89.0
scale = Vector2(0.4, 0.4)
text = "No current quest, please come back later."

[node name="FinishedQuest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -38.0
offset_top = -55.0
offset_right = 37.0
offset_bottom = -10.0
texture = ExtResource("1_5052p")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="FinishedQuest"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 75.0
offset_bottom = 26.0
scale = Vector2(0.4, 0.4)
text = "Worker"

[node name="Text" type="RichTextLabel" parent="FinishedQuest"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 162.0
offset_bottom = 89.0
scale = Vector2(0.4, 0.4)
text = "Good job! Thank you so much!"

[node name="InProgressQuest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -38.0
offset_top = -55.0
offset_right = 37.0
offset_bottom = -10.0
texture = ExtResource("1_5052p")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="InProgressQuest"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 75.0
offset_bottom = 26.0
scale = Vector2(0.4, 0.4)
text = "Worker"

[node name="Text" type="RichTextLabel" parent="InProgressQuest"]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 162.0
offset_bottom = 89.0
scale = Vector2(0.4, 0.4)

[connection signal="pressed" from="Quest/YesButton1" to="." method="_on_yes_button_1_pressed"]
[connection signal="pressed" from="Quest/NoButton1" to="." method="_on_no_button_1_pressed"]
